# ChangeLog for net-irc/weechat
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/weechat/ChangeLog,v 1.30 2006/03/18 18:30:02 swegener Exp $

*weechat-0.1.8 (18 Mar 2006)

  18 Mar 2006; Sven Wegener <swegener@gentoo.org> -weechat-0.1.4-r1.ebuild,
  -weechat-0.1.5.ebuild, +weechat-0.1.8.ebuild:
  Version bump.

*weechat-0.1.7 (17 Feb 2006)

  17 Feb 2006; Sven Wegener <swegener@gentoo.org> +weechat-0.1.7.ebuild:
  Version bump, bug #121282.

  17 Feb 2006; Sven Wegener <swegener@gentoo.org> weechat-0.1.6.ebuild:
  Marked stable on x86.

*weechat-0.1.6 (12 Nov 2005)

  12 Nov 2005; Sven Wegener <swegener@gentoo.org> +weechat-0.1.6.ebuild:
  Version bump.

  25 Sep 2005; Sven Wegener <swegener@gentoo.org> -weechat-0.1.3.ebuild,
  -weechat-0.1.4.ebuild:
  Removed old ebuilds.

*weechat-0.1.5 (24 Sep 2005)

  24 Sep 2005; Sven Wegener <swegener@gentoo.org> weechat-0.1.4-r1.ebuild,
  +weechat-0.1.5.ebuild:
  Version bump. 0.1.4-r1 stable on x86.

*weechat-0.1.4-r1 (25 Aug 2005)

  25 Aug 2005; Sven Wegener <swegener@gentoo.org> +weechat-0.1.4-r1.ebuild:
  Added support for the ssl USE flag, bug #103699.

  01 Aug 2005; Sven Wegener <swegener@gentoo.org> -weechat-0.1.1.ebuild,
  -weechat-0.1.2.1.ebuild:
  Removed old ebuilds.

  31 Jul 2005; Sven Wegener <swegener@gentoo.org> weechat-0.1.3.ebuild:
  Marked stable on x86.

*weechat-0.1.4 (30 Jul 2005)

  30 Jul 2005; Sven Wegener <swegener@gentoo.org> +weechat-0.1.4.ebuild:
  Version bump.

  07 Jul 2005; Sven Wegener <swegener@gentoo.org> weechat-0.1.2.1.ebuild:
  Marked stable on x86.

*weechat-0.1.3 (03 Jul 2005)

  03 Jul 2005; Sven Wegener <swegener@gentoo.org> +weechat-0.1.3.ebuild:
  Version bump.

*weechat-0.1.2.1 (07 Jun 2005)

  07 Jun 2005; Sven Wegener <swegener@gentoo.org> -weechat-0.1.0.ebuild,
  weechat-0.1.1.ebuild, +weechat-0.1.2.1.ebuild:
  Version bump, bug #93523. Marked 0.1.1 stable on x86.
