@@ -1,0 +1,3 @@
+MD5 0caed065da9a4ba34834eadad67dac97 weechat-0.1.9.tar.bz2 999710
+RMD160 09b309dbbb26e31c2b4dae9defba23cd3b4e59d7 weechat-0.1.9.tar.bz2 999710
+SHA256 d66f6b29f12436818b3a35181e985a2f0b1d0ba9cf0d89d376c02d9bfa865f0c weechat-0.1.9.tar.bz2 999710
