@@ -1,6 +1,11 @@
 # ChangeLog for net-irc/weechat
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/weechat/ChangeLog,v 1.30 2006/03/18 18:30:02 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/weechat/ChangeLog,v 1.31 2006/07/01 14:01:59 jokey Exp $
+
+*weechat-0.1.9 (01 Jul 2006)
+
+  01 Jul 2006; Markus Ullmann <jokey@gentoo.org> +weechat-0.1.9.ebuild:
+  Version bump wrt bug #138335
 
 *weechat-0.1.8 (18 Mar 2006)
 
